tests/fixtures/errors/generic_fnparam_member.z
# E0400: a member access on a bare type-parameter-typed value in a
# function template body.
f: function as { t: Any.generic } in { v: t } out u64 is {
    x: v.bogus
    return 0
}

main: function is {
    r: f v: 5
    print "\{r}"
}
